--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -42,6 +42,7 @@
 # # Just for example:
 # resize-overlay-duration = 4s 200ms
 
+maximize=true
 theme=light:catppuccin-latte,dark:catppuccin-frappe
 background-opacity=0.8
 font-family="FiraMono Nerd Font Medium"
