--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -43,6 +43,6 @@
 # resize-overlay-duration = 4s 200ms
 
 maximize=true
-theme=light:catppuccin-latte,dark:catppuccin-frappe
+theme=light:Catppuccin Latte,dark:Catppuccin Frappe
 background-opacity=0.8
 font-family="FiraMono Nerd Font Medium"
